fix scale label alignment in firefox

--- a/quiz.css
+++ b/quiz.css
@@ -117,7 +117,7 @@ body{
   bottom: 50%;
   left: 0;
   right: 0;
-  margin-top: -.5em;
+  margin-top: -.7em;
   text-align: center;
 }
 
